syntax = "proto2";

package payload.proto;

// Payloads for Noise handshake messages.

message NoiseHandshakePayload {
    optional bytes identity_key = 1;
    optional bytes identity_sig = 2;
    optional bytes data         = 3;
}
